add: 添加 HTTP 服务接口
